# GameOfLife

./: .gitignore  CMakeLists.txt  LICENSE
data/GameOfLife/: game.pomme
src/: config.h.in  main.cpp
src/bits/: GameHub.cpp  GameHub.h  GameScene.cpp  GameScene.h  GridEntity.cpp  GridEntity.h
